...
  final int chordTones = 2;
  List<String> pitchOrder = [];
  List<String> octavesOrder = [];
  List<String> answerChord = [];
  List<String> correctChord = [];
  List<String> answerOrder = [];
  String chordInput = 'Answer: ';
  Color chordInputColor = Colors.black;

  @override
  void startDrill() {
    currentOctave = getRandomSelection(octavePool);
    List<String> notes = [];
...
